--- a/Alumni-Swag-App/src/app/home/home.component.css
+++ b/Alumni-Swag-App/src/app/home/home.component.css
@@ -49,8 +49,8 @@
 }
 
 .footer-margins {
-    margin-left: 145px;
-    margin-right: 40px;
+    margin-left: 350px;
+    margin-right: 0px;
 }
 
 .shop {
@@ -65,4 +65,29 @@
     height: 300px;
 }
 
+.container {
+    padding: 20px;
+}
 
+.topnav {
+    width: 1200px;
+    height: 50px;
+    background: rgb(255, 145, 0);
+    font: bold;
+    font-size: large;
+    text-align: right;
+    padding-top: 10px;
+    
+}
+
+.navbar-nav {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    
+    
+}
+
+.btn-outline-warning {
+    color: rgb(255, 145, 0);
+}
