--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -1,5 +1,37 @@
 
-<div class="margins">
+<div class="container">
+        <title>Oklahoma State University Swag</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    
+        <div class="hometext row">
+          <div class="col-sm-12">
+            <h1 style="font-size: xx-large;">Oklahoma State Alumni Swag</h1>
+            <h6 style="font-family: Arial, Helvetica, sans-serif;">Your One-Stop Shop for All Things OSU</h6> 
+            </div>
+        </div>
+
+    <div class="row" style="text-align: center;">
+     <nav class="navbar-expand-sm bg-light navbar-dark" style="font-family: Arial, Helvetica, sans-serif;">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Home" routerLink = "/home" routerLinkActive = "active"> Home
+          </button>
+          </li>
+    
+          <li class="nav-item">
+            <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Catalog" routerLink = "/catalog" routerLinkActive = "active"> Contact Us
+          </button>
+          </li>
+    
+          <li class="nav-item">
+            <button  class="m-1 btn btn-light btn-outline-warning"  Buttonlabel = "Shopping" routerLink = "/shopping-cart" routerLinkActive = "active" > Shopping Cart
+          </button>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  
 
 <div class="row margins">
     <div class="col-sm-12 homepage">
@@ -17,7 +49,7 @@
 
 
 
-<div class="row margins">
+<div class="row margins hometext">
     <h5 style="text-align:center; font-size: x-large;" class= "col-sm-12">America's Brightest Orange</h5>
 
 </div>
@@ -37,7 +69,7 @@
    
        
 </div>
-    <div class="row">
+    <div class="row hometext">
         <p style="text-align: center;" class="col-sm-3"></p>
         <p style="text-align: center; font-size: large; font-weight: lighter;" class="col-sm-6">Go Pokes!</p>
         <p style="text-align: center;" class="col-sm-3"></p>
@@ -71,4 +103,3 @@
     
 
 
-</div>
