--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -15,6 +15,26 @@
     </form> -->
 
     <form ng-submit="cartItem" action="mailto:qbenedict2@att.net">
-        Submit
         <input type="submit">
     </form>
+
+    <body ng-app="myApp" ng-controller="myCtrl">
+
+        <form ng-submit="myFunc()">
+            <input type="text">
+            <input type="submit">
+        </form>
+        
+        <p>{{myTxt}}</p>
+        
+        <script>
+        var app = angular.module("myApp", []);
+        app.controller("myCtrl", function($scope) {
+            $scope.myTxt = "You have not yet clicked submit";
+            $scope.myFunc = function () {
+                $scope.myTxt = "You clicked submit!";
+            }
+        });
+        </script>
+        </body>
+        
