--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -1,39 +1,46 @@
 
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Oklahoma State University Swag</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <div class="container hometext">
-      <div style="text-align: center;">
-      <h1 style="font-size: xx-large;">Oklahoma State Alumni Swag</h1>
-      <h6 style="font-family: Arial, Helvetica, sans-serif;">Your One-Stop Shop for All Things OSU</h6> 
-  </div>
+  
+    <body>
+      <div class="container hometext">
+        <div style="text-align: center;">
+          <h1>Oklahoma State Alumni Swag</h1>
+          <h6 style="font-family: Arial, Helvetica, sans-serif;">Your One Stop Stop for All Things OSU</h6>
+        </div>
+      </div>
+      
+          
+      <div>
+       <nav class="navbar-expand-sm bg-light navbar-dark" style="font-family: Arial, Helvetica, sans-serif;">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Home" routerLink = "/home" routerLinkActive = "active"> Home
+            </button>
+            </li>
+      
+            <li class="nav-item">
+              <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Catalog" routerLink = "/catalog" routerLinkActive = "active"> Contact Us
+            </button>
+            </li>
+      
+            <li class="nav-item">
+              <button  class="m-1 btn btn-light btn-outline-warning"  Buttonlabel = "Shopping" routerLink = "/shopping-cart" routerLinkActive = "active" > Shopping Cart
+            </button>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </body>
 
- <nav class="navbar-expand-sm bg-light navbar-dark" style="font-family: Arial, Helvetica, sans-serif;">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Home" routerLink = "/home" routerLinkActive = "active"> Home
-      </button>
-      </li>
-
-      <li class="nav-item">
-        <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Catalog" routerLink = "/catalog" routerLinkActive = "active"> Contact Us
-      </button>
-      </li>
-
-      <li class="nav-item">
-        <button  class="m-1 btn btn-light btn-outline-warning"  Buttonlabel = "Shopping" routerLink = "/shopping-cart" routerLinkActive = "active" > Shopping Cart
-      </button>
-      </li>
-    </ul>
-  </nav>
-</div>
-  </body>
 </html>
+
+
 
 
  <!-- routed view goes here! -->
