--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -1,7 +1,6 @@
 
-
-<div class="margins">
-<div class="row margins">
+<div class="container">
+<div class="row">
     <div class="col-sm-12 homepage">
         <div>
             <img style= "border:black; border-style: solid;"class="picture img-fluid" src = "/assets/img/BusinessBLDG.JPG"/>
@@ -28,5 +27,5 @@
     <a href="https://business.okstate.edu/">Click here</a>
     to learn more about the Spears School of Business
   </div>
-
+</div>
 
