--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -1,30 +1,30 @@
-<div class="margins">
-<div class="row" style="margin-top:50px; font-family: Arial, Helvetica, sans-serif;">
-    <div class="col-sm-2">
-        <app-filter></app-filter>
+<div class="container">
+    <div class="row margins" style="font-family: Arial, Helvetica, sans-serif;">
+        <div class="col-sm-2">
+            <app-filter></app-filter>
+        </div>
+    
+        <div class="col-md-8">
+            <app-product-list style="text-align:center">Item List</app-product-list>
+        </div>
+    
+        <div class="col-sm-2">
+            <app-cart></app-cart>
+        </div>
     </div>
-
-    <div class="col-md-8">
-        <app-product-list style="text-align:center">Item List</app-product-list>
+    
+    <!-- test button for don't see what you like for shopping cart page-->
+    <div class="row" style="font-family: Arial, Helvetica, sans-serif;">
+        <div>
+                <form method="POST" action="mailto:emladd10@gmail.com">
+                    <p style="font-style: italic; font-size: smaller;">Can't find what you're looking for?
+                        Click and tell us how we can accommodate you.
+                        <Button ID="submit" runat="server" style="font-style: italic; font-size: smaller;">Click Here</Button>
+                    </p>
+                </form>
+        </div>
+       
     </div>
-
-    <div class="col-sm-2">
-        <app-cart></app-cart>
-    </div>
-</div>
-
-<!-- test button for don't see what you like for shopping cart page-->
-<div style="font-family: Arial, Helvetica, sans-serif;">
-    <div>
-            <form method="POST" action="mailto:emladd10@gmail.com">
-                <p style="font-style: italic; font-size: smaller;">Can't find what you're looking for?
-                    Click and tell us how we can accommodate you.
-                    <Button ID="submit" runat="server" style="font-style: italic; font-size: smaller;">Click Here</Button>
-                </p>
-            </form>
-    </div>
-   
-</div>
-
+    
 </div>
 
